--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -87,11 +87,163 @@ nav a:last-child {
 }
 
 main {
-    margin-top: 20px;
-    margin-bottom: 45px;
+  margin-top: 20px;
+  margin-bottom: 45px;
 }
 
 .hero-banner {
-    background: rgb(68, 88, 120);
-    background-image: url("../");
+  /* background: rgb(68, 88, 120); */
+  background-image: url("../images/02-hero-bg.jpg")
+    /* , linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%) */;
+  background-size: cover;
+  background-position: center;
+  /* background-blend-mode: soft-light; */
+  min-height: 30vh;
+  color: var(--light);
+  padding: 2% 6%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  text-align: right;
+}
+
+.hero-banner div {
+  flex: 0 0 90%;
+}
+
+.hero-banner h2 {
+  background-color: var(--secondary);
+  color: var(--tertiary);
+  margin: 0;
+  padding: 5px 10px;
+  font-size: 2.3rem;
+  line-height: 1.2;
+  display: inline;
+}
+
+.page-wrapper {
+  max-width: 88%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.page-section {
+  margin: 25px 0;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: space-evenly;
+}
+
+.page-section > h2 {
+  flex: 0 0 20%;
+  text-align: right;
+  padding-right: 15px;
+  border-right: 15px;
+  font-size: 4vw;
+  line-height: 1.1;
+}
+.page-section > div {
+  flex: 0 0 77%;
+}
+.page-section p {
+  margin-bottom: 20px;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.flex-item {
+  border: 5px solid var(--secondary);
+  background-color: var(--primary);
+  color: var(--tertiary);
+  min-block-size: 150px;
+  max-height: 150px;
+  flex-basis: calc(50% - 1em);
+  display: flex;
+  align-items: flex-end;
+  padding: 0 0 20px 0;
+  margin: 0.5em;
+  text-decoration: none;
+  background-blend-mode: soft-light;
+  background-size: 150%;
+  transition: all 0.5s;
+  /* rem is font size of root element */
+  font-size: 0.9rem;
+}
+
+/* selects the first work item */
+.flex-item:first-child {
+  min-height: 400px;
+  flex-basis: 100%;
+}
+
+.flex-item:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.flex-item div {
+  background-color: var(--secondary);
+  padding: 8px 10px;
+}
+.flex-item h3 {
+  font-size: 1.6rem;
+}
+
+.contact address {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+}
+
+.contact address a {
+  color: var(--tertiary);
+  padding: 5px;
+  text-decoration: none;
+  font-size: 1.3rem;
+  font-style: normal;
+  background-image: linear-gradient(
+    270deg,
+    var(--primary) 0%,
+    var(--primary) 100%
+  );
+  background-repeat: no-repeat;
+  background-size: 100% 0.2em;
+  background-position: bottom;
+  /* <property> <duration> <timing-function> <delay> */
+  transition: all 0.25s ease-in;
+  margin: 0 0.2rem 0.1rem;
+  display: inline-block;
+}
+
+.contact address a:hover {
+  background-size: 100% 88%;
+  color: var(--secondary);
+}
+
+.run-buddy {
+  background-image: url("../images/02-run-buddy.jpg");
+}
+
+.led-wall {
+  background-image: url("../images/02-portfolio-1.jpg");
+}
+
+.react-calc {
+  background-image: url("../images/02-portfolio-2.jpg");
+}
+
+.pastel-puzzles {
+  background-image: url("../images/02-portfolio-3.jpg");
+}
+
+.surf-report {
+  background-image: url("../images/02-portfolio-4.jpg");
 }
