--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -4,11 +4,21 @@
 
 /* color palette to draw from*/
 :root {
-  --primary: rgba(68, 88, 119, 1);
-  --secondary: rgba(146, 204, 206, 1);
-  --tertiary: rgba(49, 52, 61, 1);
+  --glaucous: #627CA0ff;
+  --periwinkle-crayola: #CBD5E5ff;
+  --royal-blue-dark: #052D61ff;
   --dark: rgba(28, 29, 33, 1);
   --light: rgba(238, 238, 247, 1);
+
+  --white: #F9FBFEff;
+  --forest-green-traditional: #083E02ff;
+  --ghost-white: #F4F6FBff;
+  --apple-green: #88A60Dff;
+  --ghost-white-2: #EEF1F7ff;
+  --avocado: #5A8508ff;
+  --lincoln-green: #195300ff;
+
+  --blue: #5327F2;
 }
 
 body {
@@ -16,7 +26,7 @@ body {
   padding: 0;
   font-weight: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  color: var(--primary);
+  color: var(--lincoln-green);
   background-color: var(--light);
   line-height: 1.5;
 }
@@ -36,18 +46,20 @@ p {
 
 header {
   padding: 15px 5% 15px 0;
+  position: fixed;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  background-color: var(--tertiary);
+  background-color: var(--avocado);
   box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
 }
 
 header h1 {
-  color: var(--tertiary);
-  background-color: var(--secondary);
+  color: var(--forest-green-traditional);
+  background-color: var(--periwinkle-crayola);
   padding: 5px 1% 5px 6%;
   margin: 0;
   font-size: 4vw;
@@ -63,12 +75,12 @@ nav {
 nav a {
   text-decoration: none;
   padding: 5px 10px;
-  color: var(--secondary);
+  color: var(--periwinkle-crayola);
   margin-right: 10px;
   background-image: linear-gradient(
     270deg,
-    var(--secondary) 0%,
-    var(--secondary) 100%
+    var(--periwinkle-crayola) 0%,
+    var(--periwinkle-crayola) 100%
   );
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
@@ -79,7 +91,7 @@ nav a {
 
 nav a:hover {
   background-size: 100% 100%;
-  color: var(--primary);
+  color: var(--lincoln-green);
 }
 
 nav a:last-child {
@@ -94,7 +106,7 @@ main {
 .hero-banner {
   /* background: rgb(68, 88, 120); */
   background-image: url("../images/02-hero-bg.jpg")
-    /* , linear-gradient(180deg, var(--secondary) 0%, var(--primary) 100%) */;
+    /* , linear-gradient(180deg, var(--periwinkle-crayola) 0%, var(--glaucous) 100%) */;
   background-size: cover;
   background-position: center;
   /* background-blend-mode: soft-light; */
@@ -112,8 +124,8 @@ main {
 }
 
 .hero-banner h2 {
-  background-color: var(--secondary);
-  color: var(--tertiary);
+  background-color: var(--periwinkle-crayola);
+  color: var(--forest-green-traditional);
   margin: 0;
   padding: 5px 10px;
   font-size: 2.3rem;
@@ -159,9 +171,9 @@ main {
 }
 
 .flex-item {
-  border: 5px solid var(--secondary);
-  background-color: var(--primary);
-  color: var(--tertiary);
+  border: 5px solid var(--periwinkle-crayola);
+  /* background-color: var(--glaucous); */
+  color: var(--forest-green-traditional);
   min-block-size: 150px;
   max-height: 150px;
   flex-basis: calc(50% - 1em);
@@ -188,7 +200,7 @@ main {
 }
 
 .flex-item div {
-  background-color: var(--secondary);
+  background-color: var(--periwinkle-crayola);
   padding: 8px 10px;
 }
 .flex-item h3 {
@@ -204,15 +216,15 @@ main {
 }
 
 .contact address a {
-  color: var(--tertiary);
+  color: var(--royal-blue-dark);
   padding: 5px;
   text-decoration: none;
   font-size: 1.3rem;
   font-style: normal;
   background-image: linear-gradient(
     270deg,
-    var(--primary) 0%,
-    var(--primary) 100%
+    var(--glaucous) 0%,
+    var(--glaucous) 100%
   );
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
@@ -225,7 +237,7 @@ main {
 
 .contact address a:hover {
   background-size: 100% 88%;
-  color: var(--secondary);
+  color: var(--periwinkle-crayola);
 }
 
 .run-buddy {
@@ -273,7 +285,7 @@ header nav {
 }
  .page-section > h2 {
    border-right: none;
-   border-bottom: 4px solid var(--primary);
+   border-bottom: 4px solid var(--glaucous);
    margin-bottom: 20px;
    padding-bottom: 10px;
    text-align: left;
