--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -4,28 +4,17 @@
 
 /* color palette to draw from*/
 :root {
-  --glaucous: #627CA0ff;
-  --periwinkle-crayola: #CBD5E5ff;
-  --royal-blue-dark: #052D61ff;
-  --dark: rgba(28, 29, 33, 1);
-  --light: rgba(238, 238, 247, 1);
-
-  --white: #F9FBFEff;
-  --forest-green-traditional: #083E02ff;
-  --ghost-white: #F4F6FBff;
-  --apple-green: #88A60Dff;
-  --ghost-white-2: #EEF1F7ff;
-  --avocado: #5A8508ff;
+  --periwinkle-crayola: #cbd5e5ff;
+  --forest-green-traditional: #083e02ff;
+  --ghost-white: #f4f6fbff;
+  --ghost-white-2: #eef1f7ff;
   --lincoln-green: #195300ff;
-
-  --blue: #5327F2;
 }
 
 body {
   margin: 0;
-  padding: 0;
-  font-weight: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  padding: 50px, 0, 0, 0;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: var(--lincoln-green);
   background-color: var(--light);
   line-height: 1.5;
@@ -53,13 +42,13 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  background-color: var(--avocado);
-  box-shadow: 0 5px 35px rgba(146, 204, 206, 0.4);
+  background-color: var(--forest-green-traditional);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 header h1 {
   color: var(--forest-green-traditional);
-  background-color: var(--periwinkle-crayola);
+  background-color: var(--ghost-white);
   padding: 5px 1% 5px 6%;
   margin: 0;
   font-size: 4vw;
@@ -75,12 +64,13 @@ nav {
 nav a {
   text-decoration: none;
   padding: 5px 10px;
-  color: var(--periwinkle-crayola);
+  color: var(--ghost-white-2);
   margin-right: 10px;
   background-image: linear-gradient(
     270deg,
-    var(--periwinkle-crayola) 0%,
-    var(--periwinkle-crayola) 100%
+    var(--ghost-white-2),
+    0%,
+    var(--ghost-white-2) 100%
   );
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
@@ -104,15 +94,11 @@ main {
 }
 
 .hero-banner {
-  /* background: rgb(68, 88, 120); */
-  background-image: url("../images/02-hero-bg.jpg")
-    /* , linear-gradient(180deg, var(--periwinkle-crayola) 0%, var(--glaucous) 100%) */;
+  background-image: url("../images/02-hero-bg.jpg");
   background-size: cover;
   background-position: center;
-  /* background-blend-mode: soft-light; */
   min-height: 30vh;
-  color: var(--light);
-  padding: 2% 6%;
+  padding: 25% 6%;
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
@@ -121,16 +107,19 @@ main {
 
 .hero-banner div {
   flex: 0 0 90%;
+  position: relative;
+  top: 200px;
 }
 
 .hero-banner h2 {
-  background-color: var(--periwinkle-crayola);
-  color: var(--forest-green-traditional);
+  background-color: var(--forest-green-traditional);
+  color: var(--ghost-white-2);
   margin: 0;
   padding: 5px 10px;
   font-size: 2.3rem;
   line-height: 1.2;
   display: inline;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 .page-wrapper {
@@ -154,7 +143,7 @@ main {
   text-align: right;
   padding-right: 15px;
   border-right: 15px;
-  font-size: 4vw;
+  font-size: 3vw;
   line-height: 1.1;
 }
 .page-section > div {
@@ -172,7 +161,6 @@ main {
 
 .flex-item {
   border: 5px solid var(--periwinkle-crayola);
-  /* background-color: var(--glaucous); */
   color: var(--forest-green-traditional);
   min-block-size: 150px;
   max-height: 150px;
@@ -216,15 +204,15 @@ main {
 }
 
 .contact address a {
-  color: var(--royal-blue-dark);
+  color: var(--forest-green-traditional);
   padding: 5px;
   text-decoration: none;
   font-size: 1.3rem;
   font-style: normal;
   background-image: linear-gradient(
     270deg,
-    var(--glaucous) 0%,
-    var(--glaucous) 100%
+    var(--forest-green-traditional) 0%,
+    var(--forest-green-traditional) 100%
   );
   background-repeat: no-repeat;
   background-size: 100% 0.2em;
@@ -237,7 +225,7 @@ main {
 
 .contact address a:hover {
   background-size: 100% 88%;
-  color: var(--periwinkle-crayola);
+  color: var(--ghost-white);
 }
 
 .run-buddy {
@@ -267,30 +255,29 @@ main {
     text-align: center;
   }
 
+  header h1 {
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    font-size: 10vw;
+  }
 
-header h1 {
-  width: 100%;
-  padding: 5px;
-  margin-bottom: 10px;
-  font-size: 10vw;
-}
+  header nav {
+    justify-content: center;
+  }
 
-header nav {
-  justify-content: center;
-}
-
-.page-section > h2,
-.page-section > div {
-  flex: 0 0 100%;
-}
- .page-section > h2 {
-   border-right: none;
-   border-bottom: 4px solid var(--glaucous);
-   margin-bottom: 20px;
-   padding-bottom: 10px;
-   text-align: left;
-   font-size: 7vw;
- }
+  .page-section > h2,
+  .page-section > div {
+    flex: 0 0 100%;
+  }
+  .page-section > h2 {
+    border-right: none;
+    border-bottom: 4px solid var(--glaucous);
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    text-align: left;
+    font-size: 7vw;
+  }
 }
 
 @media screen and (max-width: 768px) {
